--- a/index.html
+++ b/index.html
@@ -52,4 +52,24 @@ button{width:100%;}
 
 
 <div class="card grid">
-  
+<section>
+<h3>Sobre o passeio</h3>
+<p>Rumo à Primavera do Leste para aproveitar águas cristalinas, natureza e muita energia boa. Um dia perfeito para relaxar, renovar as energias e encerrar o ano com uma experiência inesquecível.</p>
+
+
+<div class="card">
+<strong>Incluso no passeio</strong>
+<div class="items-list">
+<div>🚐 Transporte ida e volta</div>
+<div>🤿 Snorkel</div>
+<div>🦺 Colete salva-vidas</div>
+<div>🛡️ Seguro de vida</div>
+<div>😄 Muita diversão e aventura</div>
+</div>
+</div>
+
+
+<div style="margin-top:10px">
+<strong>Valores</strong>
+<ul>
+<li>R$ 332,00 — Adulto (com transporte)</li>
